WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83232
Text input doesn't work for some Flash forms
https://bugs.webkit.org/show_bug.cgi?id=83232
Summary
Text input doesn't work for some Flash forms
Anders Carlsson
Reported
2012-04-04 16:23:01 PDT
Text input doesn't work for some Flash forms
Attachments
Patch
(3.90 KB, patch)
2012-04-04 16:26 PDT
,
Anders Carlsson
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-04-04 16:26:17 PDT
Created
attachment 135712
[details]
Patch
Anders Carlsson
Comment 2
2012-04-04 16:29:13 PDT
Committed
r113261
: <
http://trac.webkit.org/changeset/113261
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug